
- #11530: Include kinds in kind mismatch error message.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #10818: Preserve integer literal formatting in type hint.
  (Leonhard Markert, review by Gabriel Scherer and Florian Angeletti)

- #11338: Turn some partial application warnings into hints.
  (Leo White, review by Stephen Dolan)

- #10911: Improve the location reported by parenthesized assert expressions
  (Fabian Hemmer, review by Gabriel Scherer)

- #1391, #7645, #3922: Add an early error when compiling different
  modules with mismatching -for-pack
  (Pierre Chambart and Vincent Laviron, review by Mark Shinwell)

- #11635, #5461, #10564: Turn warning 31 (Module_linked_twice) into a hard error
  (Hugo Heuzard, review by Valentin Gatien-Baron and Gabriel Scherer)

- #11646: Add colors to error message hints.
  (Christiana Anthony, review by Florian Angeletti)

- #11653: Add the -no-absname option to ocamlc, ocamlopt and ocamldep.
  (Abiola Abdulsalam, review by Sébastien Hinderer and Florian Angeletti)

- #11696: Add the -no-g option to ocamlc and ocamlopt.
  (Abiola Abdulsalam, review by Sébastien Hinderer, Nicolás Ojeda Bär and
  Florian Angeletti)

- #11722: clearer error messages on non-well-founded type definitions
  (Gabriel Scherer, review by Jacques Garrigue)

- #11819: make the `native_compiler` and `native_dynlink` configuration
  variables available through ocamlc -config.
  (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)

- #11235, #11864: usage warnings for constructors and fields can now be disabled
  on field-by-field or constructor-by-constructor basis
  (Florian Angeletti, review by Gabriel Scherer)

- #8602, #11863: Add -stop-after lambda flag option
  (Douglas Smith and Dmitrii Kosarev, review by Gabriel Scherer)

### Internal/compiler-libs changes:

- #11847, #11849, #11851, #11898: small refactorings in the type checker
  (Gabriel Scherer, review by Nicolás Ojeda Bär)
