@@ -2,6 +2,9 @@ Line 7, characters 15-17:
 7 | let invalid = "\99" ;;
                    ^^
 Warning 14 [illegal-backslash]: illegal backslash escape in string.
+Hint: Single backslashes \ are reserved for escape sequences
+(\n, \r, ...). Did you check the list of OCaml escape sequences?
+To get a backslash character, escape it with a second backslash: \\.
 val invalid : string = "\\99"
 Line 1, characters 15-19:
 1 | let invalid = "\999" ;;
@@ -15,10 +18,16 @@ Line 1, characters 15-17:
 1 | let invalid = "\o77" ;;
                    ^^
 Warning 14 [illegal-backslash]: illegal backslash escape in string.
+Hint: Single backslashes \ are reserved for escape sequences
+(\n, \r, ...). Did you check the list of OCaml escape sequences?
+To get a backslash character, escape it with a second backslash: \\.
 val invalid : string = "\\o77"
 Line 1, characters 15-17:
 1 | let invalid = "\o99" ;;
                    ^^
 Warning 14 [illegal-backslash]: illegal backslash escape in string.
+Hint: Single backslashes \ are reserved for escape sequences
+(\n, \r, ...). Did you check the list of OCaml escape sequences?
+To get a backslash character, escape it with a second backslash: \\.
 val invalid : string = "\\o99"
 
